--- a/Files/css/rya-header.css
+++ b/Files/css/rya-header.css
@@ -59,7 +59,7 @@ body{
 
 .headerBottom{
 	display: flex;
-	background-color: #00386c;
+	background-color: #05a9af;
 }
 .headerBottom > div{
 	width: 33%;
